<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ijetty_logo" android:scaleType="fitXY" />
    <TextView android:textAppearance="@style/small" android:gravity="center" android:id="@id/info" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:autoLink="web" android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:id="@id/start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/start_jetty" android:layout_weight="1.0" />
            <Button android:id="@id/stop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/stop_jetty" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <Button android:id="@id/config" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/config_jetty" android:layout_weight="1.0" />
            <Button android:id="@id/download" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/download_webapp" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
    <TextView android:textAppearance="@style/H1" android:id="@id/console_heading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/console" />
    <ScrollView android:id="@id/consoleScroller" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
        <TextView android:textAppearance="@style/footer" android:autoLink="none" android:id="@id/console" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>